# Oridium

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  a.out.js  a.out.wasm  miner.c  mining.wasm  package-lock.json  package.json  pre.js  railway.json  remove_commit.py
core/: Transaction.cpp  Transaction.h  block.cpp  block.h  blockchain.cpp  blockchain.h  build-wasm.bat  extern_api.cpp  miner.c  miner.cpp  mining.cpp  sha256.cpp  sha256.h  storage.cpp  storage.h  util.cpp
include/: util.h
oridium-central/: central.css  central.htm  central.js  (+2 more)
oridium-wallet/: CMakeLists.txt  README.md  _headers  index.html  package-lock.json  package.json  styles.css  vercel.json  wallet.js
oridium-wallet/assets/oridium-chart/: demo.html  toolbar.css
oridium-wallet/core/: Transaction.cpp  Transaction.h  block.cpp  block.h  blockchain.h  storage.cpp  storage.h  util.h
oridium-wallet/oridium-wallet/: index.html  wallet.js
oridium-wallet/oridium-wallet/styles/base/: fonts.css
oridium-wallet/oridium-wallet/styles/base/layout/: styles.css
oridium-wallet/public/: mining.js  mining.mjs  mining.wasm
oridium-wallet/public/scripts/wasm/: mining.wasm
oridium-wallet/scripts/: bip39-loader.js  blockchain-bridge.js  chart.js  connect-wallet.js  idbfs.js  incoming-transactions.js  intro.js  loader.js  main.js  miner-worker.js  mining-control.js  mining-loader.js  no-tty.js  orid-alert.js  orid-global.js  orid-network.js  orid-pricing.js  orid-session.js  register-global.js  responsive-fix.js  restore-wallet-modal.js  transaction-builder.js  transaction-history.js  transaction-search.js  update-public-key.js  wallet-bridge.js  wallet-logic.js  wallet-modal.js  wallet-session.js
oridium-wallet/scripts/helpers/: getBlockchain.js  getTransactionsForWallet.js
oridium-wallet/scripts/lib/: globals.d.ts  lightweight-charts.standalone.development.js  package-lock.json  package.json  tsconfig.json
oridium-wallet/scripts/utils/: crypto.js  difficulty.js
oridium-wallet/scripts/wallet/: create-wallet.js  send-orid.js  send-publickey.js  wallet-generator.js
oridium-wallet/scripts/wasm/: miner.js  miner.wasm  mining.js
oridium-wallet/src/: main.cpp
oridium-wallet/styles/: styles.css
oridium-wallet/styles/base/: buttons.css  colors.css  fonts.css  form.css  loader.css  reset.css  share-icon.css  styles.css  theme.css
oridium-wallet/styles/base/layout/: styles.css
oridium-wallet/styles/components/: chart.css  content.css  cookie-banner.css  mining.css  modal.css  orid-alert.css  publickey.css  sidebar.css  transactions.css  walletstats.css
oridium-wallet/wasm/: blockchain.js  blockchain.wasm  build-wasm.ps1  fs-idbfs.js  mining.js  mining.wasm
(+89 files in other folders)
